crates/mineral-tui/src/view/snapshots/collapse_toward_anchor_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
assertion_line: 1224
description: "退出收缩朝左下锚点:收缩框偏左下、非居中"
expression: t.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" ╭─────────────────────────────────────────────────────╮                        "
" │                                                   ⢸││                        "
" │              登录后重启 mineral 生效              ⢸││                        " Hidden by multi-width symbols: [(17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (36, " "), (38, " ")]
" │                                                   ⢸││                        "
" │                                                   ⢸││                        "
" │                                                   ⢸││                        "
" │                                                   ⢸││                        "
" │                                                   ⢸││                        "
" │0 / 0 ─────────────────────────────────────────────╯╰│                        "
" │lyrics ──────────────────────────────╮╭ spectrum ────│                        "
" │                                     │╭ transport ───│                        "
" │                                     ││         LoveL│                        "
" │                                     ││              │                        "
" │             ♪ no lyrics             ││ 0:00 ●───────│                        "
" │                                     ││         [⏮]  │                        "
" ╰─────────────────────────────────────────────────────╯                        "
"                                                                                "
"                                                                                "
