crates/mineral-tui/src/view/snapshots/fullscreen_morph_midframe_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
assertion_line: 2087
description: 全屏形变中途：封面与当前歌词交叉移动，其他文字固定排版淡化交接
expression: t.backend()
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"              ╭────────────────────────╮                     ╭───────────╮      "
"              │                        │                     │           │      "
"              │   ╭ lyrics · synced ✦ ─────────────────── [t╮│           │      "
"              │   │地上へ出ると 煩（うるさ）いくらいの散光が││           │      " Hidden by multi-width symbols: [(20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " ")]
"              │   │                                         ││           │      "
"              │   │          深く 深く  潜ったままの        ││           │      " Hidden by multi-width symbols: [(30, " "), (32, " "), (35, " "), (37, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " ")]
"              ╰───│ ╭ transport ────────────────────────╮   │╰───────────╯      "
"                  │ │             潜在表明              │   │                   " Hidden by multi-width symbols: [(35, " "), (37, " "), (39, " "), (41, " ")]
"                  │太陽にあぶり出される  僕の孤独のカタチが │                   " Hidden by multi-width symbols: [(20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " ")]
"                  │ │ 1:02 ━━━━━●───────────────── 4:22 │   │──────────────────╮"
"                  │ │       [⏮]   [▶]   [⏭]   [→]       │   │                  │"
"                  │ │        p     ␣     n     m        │   │                  │"
"                  │ │ vol ██ 100% mode seq        fmt — │   │                  │"
"                  ╰─╰───────────────────────────────────╯───╯▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁│"
"                    ╰──────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
