crates/mineral-tui/src/view/snapshots/fullscreen_steady_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
description: "全屏稳态:cover 左 / lyrics 右 / spectrum+transport 贴底"
expression: t.backend()
---
"                                   ╭ lyrics · synced ✦ ─────────────────── [t] ╮"
"                                   │地上へ出ると 煩（うるさ）いくらいの散光が僕│" Hidden by multi-width symbols: [(37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " "), (74, " "), (76, " "), (78, " ")]
"                                   │                                           │"
"                                   │          深く 深く  潜ったままの          │" Hidden by multi-width symbols: [(47, " "), (49, " "), (52, " "), (54, " "), (58, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " ")]
"                                   │                                           │"
"                                   │           僕の声を 抱えて歩いた           │" Hidden by multi-width symbols: [(48, " "), (50, " "), (52, " "), (54, " "), (57, " "), (59, " "), (61, " "), (63, " "), (65, " "), (67, " ")]
"                                   │                                           │"
"                                   │ 太陽にあぶり出される  僕の孤独のカタチが  │" Hidden by multi-width symbols: [(38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " "), (74, " "), (76, " ")]
"                                   │                                           │"
"╭ transport ────────────────fmt — ╮│      後ずさりするように  影になった       │" Hidden by multi-width symbols: [(43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (57, " "), (59, " "), (63, " "), (65, " "), (67, " "), (69, " "), (71, " ")]
"│            潜在表明             ││                                           │" Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (20, " ")]
"│          MyGO!!!!! ·            ││  眩しすぎる正しさで 僕へと照りつけないで  │" Hidden by multi-width symbols: [(39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " "), (53, " "), (55, " "), (58, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " "), (74, " "), (76, " ")]
"│━━━━━━━●─────────────────────────││                                           │"
"╰ 1:02 ───────────────────── 4:22 ╯╰───────────────────────────────────────────╯"
"╭ spectrum ────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃▃              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
