crates/mineral-tui/src/view/snapshots/search_detail_album_description_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
description: "Search 专辑 detail 简介:多段原文按 \\n 多行渲染 + 溢出滚动条"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ◉ albums  winlose                                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────────────────────╮╭◉ album · Win&Lose──────────────────────────────────────────────────────╮"
"│  album                artist         tracks││                       Win&Lose                                         │"
"│▌ Win&Lose                            12    ││                                                                        │"
"│                                            ││                       12 tracks · 2022 · 野生唱片                      │" Hidden by multi-width symbols: [(90, " "), (92, " "), (94, " "), (96, " ")]
"│                                            ││                                                                        │"
"│                                            ││                       三年过去，还是没能成为一个厉害的大人。Chinese   █│" Hidden by multi-width symbols: [(71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " "), (97, " "), (99, " "), (101, " "), (103, " "), (105, " "), (107, " ")]
"│                                            ││                       Football也没能成为一个摇滚天团。                █│" Hidden by multi-width symbols: [(79, " "), (81, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " "), (97, " "), (99, " "), (101, " ")]
"│                                            ││                                                                       █│"
"│                                            ││                       游戏一旦开始就注定会有一个结局。                █│" Hidden by multi-width symbols: [(71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " "), (97, " "), (99, " "), (101, " ")]
"│                                            ││                       胜利或失败。                                    ││" Hidden by multi-width symbols: [(71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " ")]
"│                                            ││                                                                       ││"
"│                                            ││                       每个人都想成为赢家，用胜利的喜悦去回报付出的时间││" Hidden by multi-width symbols: [(71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " "), (97, " "), (99, " "), (101, " "), (103, " "), (105, " "), (107, " "), (109, " "), (111, " "), (113, " "), (115, " "), (117, " ")]
"│                                            ││                       。                                              ││" Hidden by multi-width symbols: [(71, " ")]
"│                                            ││                                                                       ││"
"│                                            ││                              ────────────                              │"
"│                                            ││    title                                artist                   len   │"
"│                                            ││▌   LoveLetterTypewriter                 Mineral                  3:45  │"
"│                                            ││    Palisade                             Mineral                  4:31  │"
"│                                            ││    Gjs                                  Mineral                  4:46  │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"╰ 1 / 1 ─────────────────────────────────────╯╰ 1 / 3 ─────────────────────────────────────────────────────────────────╯"
"╭ transport ─────────────────────────────────────────────────────────────────────────────────────────────────────fmt — ╮"
"│                                                           —                                                          │"
"│                                                           ·                                                          │"
"│●─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│"
"╰ 0:00 ────────────────────────────────────────────────────────────────────────────────────────────────────────── -:-- ╯"
