crates/mineral-tui/src/view/snapshots/search_detail_artist_albums_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
description: "Search artist detail Albums 区:专辑表 name/tracks/year/label 四列 + 表头"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ✦ artists  mineral                                                                                       │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────────────────────╮╭✦ artist · Mineral──────────────────────────────────────────────────────╮"
"│  artist                              fans  ││                     Mineral                                            │"
"│▌ Mineral                             176k  ││                     176,393 fans                                       │"
"│                                            ││                     2 albums · 21 songs                                │"
"│                                            ││                                                                        │"
"│                                            ││                     Texas emo, 1994–1998                               │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                              ────────────                              │"
"│                                            ││Top Songs  Albums   [ / ] section                                       │"
"│                                            ││  name                              tracks year   label                 │"
"│                                            ││▌ EndSerenading                     10     2015   Crank! Records        │"
"│                                            ││  ThePowerOfFailing                 11     2020   Crank! Records        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"╰ 1 / 1 ─────────────────────────────────────╯╰ 1 / 2 ─────────────────────────────────────────────────────────────────╯"
"╭ transport ─────────────────────────────────────────────────────────────────────────────────────────────────────fmt — ╮"
"│                                                           —                                                          │"
"│                                                           ·                                                          │"
"│●─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│"
"╰ 0:00 ────────────────────────────────────────────────────────────────────────────────────────────────────────── -:-- ╯"
