crates/mineral-tui/src/view/snapshots/search_detail_description_scrolled_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
assertion_line: 1996
description: "Search 专辑 detail 简介滚到底:窗口在尾部 + 滚动条滑块贴轨道底"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ◉ albums  winlose                                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────────────────────╮╭◉ album · Win&Lose──────────────────────────────────────────────────────╮"
"│  album                artist         tracks││                       Win&Lose                                         │"
"│▌ Win&Lose                            12    ││                                                                        │"
"│                                            ││                       12 tracks · 2022 · 野生唱片                      │" Hidden by multi-width symbols: [(90, " "), (92, " "), (94, " "), (96, " ")]
"│                                            ││                                                                        │"
"│                                            ││                       徐波）                                          ││" Hidden by multi-width symbols: [(71, " "), (73, " "), (75, " ")]
"│                                            ││                                                                       ││"
"│                                            ││                       发行厂牌：野生唱片                              ││" Hidden by multi-width symbols: [(71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " "), (87, " ")]
"│                                            ││                       发行编号：WILD-022                              ││" Hidden by multi-width symbols: [(71, " "), (73, " "), (75, " "), (77, " "), (79, " ")]
"│                                            ││                       录音师：骷髅，李珂                              ││" Hidden by multi-width symbols: [(71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " "), (87, " ")]
"│                                            ││                       混音/母带：骷髅                                 █│" Hidden by multi-width symbols: [(71, " "), (73, " "), (76, " "), (78, " "), (80, " "), (82, " "), (84, " ")]
"│                                            ││                       制作：Chinese Football                          █│" Hidden by multi-width symbols: [(71, " "), (73, " "), (75, " ")]
"│                                            ││                       封面插画：史悲                                  █│" Hidden by multi-width symbols: [(71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " ")]
"│                                            ││                              ────────────                              │"
"│                                            ││    title                                artist                   len   │"
"│                                            ││▌   LoveLetterTypewriter                 Mineral                  3:45  │"
"│                                            ││    Palisade                             Mineral                  4:31  │"
"│                                            ││    Gjs                                  Mineral                  4:46  │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"│                                            ││                                                                        │"
"╰ 1 / 1 ─────────────────────────────────────╯╰ 1 / 3 ─────────────────────────────────────────────────────────────────╯"
"╭ transport ───────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│                                                           —                                                          │"
"│                                                           ·                                                          │"
"│ 0:00 ●───────────────────────────────────────────────────────────────────────────────────────────────────────── -:-- │"
"│                                                 [⏮]   [▶]   [⏭]   [→]                                                │"
"│                                                  p     ␣     n     m                                                 │"
"│ vol ████████████ 100%                                 mode seq                                                 fmt — │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
