crates/mineral-tui/src/view/snapshots/search_detail_focused_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
description: "Search detail 焦点:detail 框 accent + results 框暗调 + 选中行暗调高亮"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ♪ songs  serenading                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────╮╭♪ song · LoveLetterTypewriter───────────────────╮"
"│  title       artist   len  ││               LoveLetterTypewriter             │"
"│▌ LoveLetterT Mineral  3:45 ││               Mineral                          │"
"│  Palisade    Mineral  4:31 ││                                                │"
"│  Gjs         Mineral  4:46 ││                                                │"
"│  Unfinished  Mineral  6:07 ││                                                │"
"│                            ││                                                │"
"│                            ││                  ────────────                  │"
"│                            ││  ⠋ loading                                     │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"╰ 1 / 4 ─────────────────────╯╰────────────────────────────────────────────────╯"
"╭ transport ───────────────────────────────────────────────────────────────────╮"
"│                                       —                                      │"
"│                                       ·                                      │"
"│ 0:00 ●───────────────────────────────────────────────────────────────── -:-- │"
"│                             [⏮]   [▶]   [⏭]   [→]                            │"
"│                              p     ␣     n     m                             │"
"│ vol ████████████ 100%             mode seq                             fmt — │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
