crates/mineral-tui/src/view/snapshots/search_empty_results_hint_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
description: "Search 空结果:results 列居中 lite 提示(非高亮行) + prompt/detail 外框"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ♪ songs                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭results─────────────────────╮╭detail──────────────────────────────────────────╮"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│        type a query        ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"╰────────────────────────────╯╰────────────────────────────────────────────────╯"
"╭ transport ─────────────────────────────────────────────────────────────fmt — ╮"
"│                                       —                                      │"
"│                                       ·                                      │"
"│●─────────────────────────────────────────────────────────────────────────────│"
"╰ 0:00 ────────────────────────────────────────────────────────────────── -:-- ╯"
