crates/mineral-tui/src/view/snapshots/search_focus_ring_slide_midframe_snapshot.snap
---
source: crates/mineral-tui/src/view/frame.rs
description: "Search 焦点环滑动中途:accent 浮动边框悬在 prompt 与 results 之间,两面板边框压暗"
expression: t.backend()
---
"╭search────────────────────────────────────────────────────────────────────────╮"
"│ ♫ netease   ♪ songs                                                          │"
"┌────────────────────────────────────────────────────┐─────────────────────────╯"
"│results─────────────────────╮╭detail────────────────│─────────────────────────╮"
"│                            ││                      │                         │"
"│                            ││                      │                         │"
"│                            ││                      │                         │"
"│                            ││                      │                         │"
"│                            ││                      │                         │"
"└────────────────────────────────────────────────────┘                         │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"│                            ││                                                │"
"╰────────────────────────────╯╰────────────────────────────────────────────────╯"
"╭ transport ───────────────────────────────────────────────────────────────────╮"
"│                                       —                                      │"
"│                                       ·                                      │"
"│ 0:00 ●───────────────────────────────────────────────────────────────── -:-- │"
"│                             [⏮]   [▶]   [⏭]   [→]                            │"
"│                              p     ␣     n     m                             │"
"│ vol ████████████ 100%             mode seq                             fmt — │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
